fixed button align

--- a/permissions/components/user-modal-dialog/user-modal-dialog.css
+++ b/permissions/components/user-modal-dialog/user-modal-dialog.css
@@ -2,3 +2,9 @@
   display: inline-block;
   width: 50%;
 }
+
+.user-modal-dialog .lookup-in-active-directory {
+  position: absolute;
+  bottom: 0.6rem;
+  margin: 0 1rem;
+}
